<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/bg2">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="left"
        android:textSize="18sp"
        android:orientation="horizontal"
        android:text="@string/ide"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/perusahaan"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="center"
        android:text="@string/alamat"/>

    <ImageView
        android:layout_width="275dp"
        android:layout_height="300dp"
        android:layout_gravity="center"
        android:src="@drawable/ainie"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/name"
        android:textStyle="italic"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/phone"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:src="@drawable/email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/email"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/qr"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:text="@string/melayani"
            android:gravity="center"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>